Fix manifest and service worker paths for consistent PWA support

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="7 Pleasures">
   <title>7 Pleasures</title>
-  <link rel="manifest" href="./manifest.json">
+  <link rel="manifest" href="manifest.json">
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>😈</text></svg>">
   <script src="https://cdn.tailwindcss.com"></script>
   <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
@@ -448,7 +448,10 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
-        navigator.serviceWorker.register('./sw.js').catch(() => {});
+        const swPath = window.location.pathname.endsWith('/') 
+          ? window.location.pathname + 'sw.js'
+          : window.location.pathname.replace(/\/[^\/]*$/, '/sw.js');
+        navigator.serviceWorker.register(swPath).catch(() => {});
       });
     }
   </script>
